--- a/resources/assets/app/components/authenticate/authenticate.html
+++ b/resources/assets/app/components/authenticate/authenticate.html
@@ -1,6 +1,6 @@
 <div class="col-sm-6 col-sm-offset-3">
     <div class="well">
-        <h3><strong>{{ 'APP_NAME' | translate }}</strong></h3>
+        <h3 class="text-center"><strong>{{ 'APP_NAME' | translate }}</strong></h3>
 
         <form>
 
@@ -24,9 +24,11 @@
 
                 </fieldset>
 
-                <button class="btn btn-lg btn-primary" type="submit" ng-click="$ctrl.submitForm()">
-                    {{ 'SIGN' | translate }}
-                </button>
+                <div class="text-center">
+                    <button class="btn btn-lg btn-primary" type="submit" ng-click="$ctrl.submitForm()">
+                        {{ 'SIGN' | translate }}
+                    </button>
+                </div>
 
             </fieldset>
         </form>
