--- a/resources/assets/app/components/authenticated/water-readings/water-readings-restore/water-readings-restore.html
+++ b/resources/assets/app/components/authenticated/water-readings/water-readings-restore/water-readings-restore.html
@@ -18,7 +18,7 @@
 
             <button class="btn btn-danger" ng-click="$ctrl.restore($ctrl.dumpFile)"
                     ng-disabled="waterReadingRestoreForm.$invalid"
-                    confirm="{{ 'CONFIRM_READING_IMPORT' | translate }}">
+                    confirm="{{ 'CONFIRM_DATA_IMPORT' | translate }}">
                 {{ 'IMPORT' | translate }}
             </button>
 
