--- a/resources/assets/app/components/authenticated/dashboard/dashboard.html
+++ b/resources/assets/app/components/authenticated/dashboard/dashboard.html
@@ -1,1 +1,1 @@
-<h1>{{ 'HELLO' | translate }}, {{ $ctrl._Auth.current.email }}</h1>
+<h1>{{ 'HELLO' | translate }}, {{ $ctrl._Auth.current.name }}</h1>
