gas invoices aggregates basic plot

--- a/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-aggregates/gas-invoices-aggregates.html
+++ b/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-aggregates/gas-invoices-aggregates.html
@@ -46,6 +46,8 @@
 
     </div>
 
+    <div id="aggregatesPlot"></div>
+
     <div class="panel-footer">
         <div class="text-center">
             <dir-pagination-controls></dir-pagination-controls>
