--- a/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-aggregates/gas-invoices-aggregates.html
+++ b/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-aggregates/gas-invoices-aggregates.html
@@ -46,7 +46,7 @@
 
     </div>
 
-    <div id="aggregatesPlot"></div>
+    <div responsive-plot data="$ctrl.plot.data"></div>
 
     <div class="panel-footer">
         <div class="text-center">
