--- a/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-aggregates/gas-invoices-aggregates.html
+++ b/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-aggregates/gas-invoices-aggregates.html
@@ -52,6 +52,12 @@
         <div class="text-center">
             <dir-pagination-controls></dir-pagination-controls>
         </div>
+        <a role="button" ui-sref="app.authenticated.gas-invoices.list" class="footer-menu-item">
+            <i class="fa fa-list"></i> {{ 'LIST' | translate }}
+        </a>
+        <a role="button" ui-sref="app.authenticated.dashboard" class="footer-menu-item">
+            <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
+        </a>
     </div>
 
 </div>
