--- a/resources/assets/app/components/authenticated/report/report-plot/report-plot.html
+++ b/resources/assets/app/components/authenticated/report/report-plot/report-plot.html
@@ -6,4 +6,10 @@
 
     <div responsive-plot data="$ctrl.plot.data" layout="$ctrl.plot.layout"></div>
 
+    <div class="panel-footer">
+        <a role="button" ui-sref="app.authenticated.dashboard" class="footer-menu-item">
+            <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
+        </a>
+    </div>
+
 </div>
