--- a/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-charge/electricity-readings-charge.html
+++ b/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-charge/electricity-readings-charge.html
@@ -12,8 +12,8 @@
                  ng-repeat="component in $ctrl.chrageComponents">
 
                 <div class="row">
-                    <label for="{{ component.symbol }}" class="col-sm-1 control-label">{{ component.token | translate
-                        }}</label>
+                    <label for="{{ component.symbol }}" class="col-sm-1 control-label">
+                        {{ component.token | translate }}</label>
                     <div class="col-sm-11">
                         <input type="number" class="form-control" id="{{ component.symbol }}"
                                name="{{ component.symbol }}" required
@@ -47,8 +47,11 @@
     </div>
 
     <div class="panel-footer">
-        <a role="button" ui-sref="app.authenticated.electricity-readings.list">
-            <i class="fa fa-arrow-circle-left"></i> {{ 'BACK' | translate }}
+        <a role="button" ui-sref="app.authenticated.electricity-readings.list" class="footer-menu-item">
+            <i class="fa fa-list"></i> {{ 'LIST' | translate }}
+        </a>
+        <a role="button" ui-sref="app.authenticated.dashboard" class="footer-menu-item">
+            <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
         </a>
     </div>
 
