--- a/resources/assets/app/components/authenticated/gas-invoices/gas-invoice-form/gas-invoice-form.html
+++ b/resources/assets/app/components/authenticated/gas-invoices/gas-invoice-form/gas-invoice-form.html
@@ -76,8 +76,11 @@
     </div>
 
     <div class="panel-footer">
-        <a role="button" ui-sref="app.authenticated.gas-invoices.list">
-            <i class="fa fa-arrow-circle-left"></i> {{ 'BACK' | translate }}
+        <a role="button" ui-sref="app.authenticated.gas-invoices.list" class="footer-menu-item">
+            <i class="fa fa-list"></i> {{ 'LIST' | translate }}
+        </a>
+        <a role="button" ui-sref="app.authenticated.dashboard" class="footer-menu-item">
+            <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
         </a>
     </div>
 
