--- a/resources/assets/app/components/authenticated/water-readings/water-reading-form/water-reading-form.html
+++ b/resources/assets/app/components/authenticated/water-readings/water-reading-form/water-reading-form.html
@@ -62,8 +62,11 @@
     </div>
 
     <div class="panel-footer">
-        <a role="button" ui-sref="app.authenticated.water-readings.list">
-            <i class="fa fa-arrow-circle-left"></i> {{ 'BACK' | translate }}
+        <a role="button" ui-sref="app.authenticated.water-readings.list" class="footer-menu-item">
+            <i class="fa fa-list"></i> {{ 'LIST' | translate }}
+        </a>
+        <a role="button" ui-sref="app.authenticated.dashboard" class="footer-menu-item">
+            <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
         </a>
     </div>
 
