--- a/resources/assets/app/components/authenticated/water-readings/water-readings-list/water-readings-list.html
+++ b/resources/assets/app/components/authenticated/water-readings/water-readings-list/water-readings-list.html
@@ -77,6 +77,9 @@
         <div class="text-center">
             <dir-pagination-controls></dir-pagination-controls>
         </div>
+        <a role="button" ui-sref="app.authenticated.dashboard" class="footer-menu-item">
+            <i class="fa fa-home"></i> {{ 'DASHBOARD' | translate }}
+        </a>
     </div>
 
 </div>
