--- a/resources/assets/app/components/authenticated/dashboard/dashboard.html
+++ b/resources/assets/app/components/authenticated/dashboard/dashboard.html
@@ -15,4 +15,7 @@
     <a ui-sref="app.authenticated.water-readings.create" class="list-group-item">
         <i class="fa fa-tint"></i> {{ 'WATER' | translate }} - {{ 'ENTER_DATA' | translate }}
     </a>
+    <a ui-sref="app.authenticated.backup" class="list-group-item">
+        <i class="fa fa-clone"></i> {{ 'MAKE_BACKUP' | translate }}
+    </a>
 </div>
