--- a/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-charge/electricity-readings-charge.scss
+++ b/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-charge/electricity-readings-charge.scss
@@ -1,3 +1,8 @@
 .electricity-readings-charge-form {
   padding: 30px;
 }
+
+.electricity-readings-charge-form-group-addon {
+  width: 70px;
+  text-align: left;
+}
