--- a/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-prediction/electricity-readings-prediction.html
+++ b/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-prediction/electricity-readings-prediction.html
@@ -4,7 +4,7 @@
         <strong>{{ 'ELECTRICITY_USAGE_PREDICTION' | translate }}</strong>
     </div>
 
-    <div class="electricity-usage-prediction-form">
+    <div class="electricity-usage-prediction">
 
         <div ng-form="electricityUsagePredictionForm" class="form">
 
@@ -24,7 +24,7 @@
 
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive electricity-usage-prediction">
 
         <table class="table" ng-if="$ctrl.prediction">
             <thead>
