--- a/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-charge/electricity-readings-charge.html
+++ b/resources/assets/app/components/authenticated/electricity-readings/electricity-readings-charge/electricity-readings-charge.html
@@ -6,33 +6,28 @@
 
     <div class="electricity-readings-charge-form">
 
-        <div ng-form="electricityReadingsChargeForm" class="form-horizontal">
+        <div ng-form="electricityReadingsChargeForm" class="form">
 
             <div class="form-group" ng-class="{ 'has-error': electricityReadingsChargeForm[component.symbol].$invalid }"
                  ng-repeat="component in $ctrl.chrageComponents">
 
-                <div class="row">
-                    <label for="{{ component.symbol }}" class="col-sm-1 control-label">
-                        {{ component.token | translate }}</label>
-                    <div class="col-sm-11">
-                        <input type="number" class="form-control" id="{{ component.symbol }}"
-                               name="{{ component.symbol }}" required
-                               ng-pattern="/^\d{1,3}(\.\d{0,6})?$/"
-                               placeholder="{{ component.token | translate }}"
-                               ng-model="$ctrl.electricityCharge[component.symbol]"
-                               parse-float>
+                <div class="input-group">
+                    <div class="input-group-addon electricity-readings-charge-form-group-addon">
+                        {{ component.token | translate }}
                     </div>
+                    <input type="number" class="form-control" id="{{ component.symbol }}"
+                           name="{{ component.symbol }}" required
+                           ng-pattern="/^\d{1,3}(\.\d{0,6})?$/"
+                           placeholder="{{ component.token | translate }}"
+                           ng-model="$ctrl.electricityCharge[component.symbol]"
+                           parse-float>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm-offset-1 col-sm-11">
-                        <div class="help-block" ng-messages="electricityReadingsChargeForm[component.symbol].$error"
-                             ng-messages-multiple>
-                            <p ng-message="required">{{ 'REQUIRED_FIELD' | translate}}</p>
-                            <p ng-message="pattern">{{ 'NUMERIC_PATTERN_CHARGE' | translate}}</p>
-                            <p ng-message="number">{{ 'NOT_A_NUMBER' | translate}}</p>
-                        </div>
-                    </div>
+                <div class="help-block" ng-messages="electricityReadingsChargeForm[component.symbol].$error"
+                     ng-messages-multiple>
+                    <p ng-message="required">{{ 'REQUIRED_FIELD' | translate}}</p>
+                    <p ng-message="pattern">{{ 'NUMERIC_PATTERN_CHARGE' | translate}}</p>
+                    <p ng-message="number">{{ 'NOT_A_NUMBER' | translate}}</p>
                 </div>
 
             </div>
