--- a/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-restore/gas-invoices-restore.html
+++ b/resources/assets/app/components/authenticated/gas-invoices/gas-invoices-restore/gas-invoices-restore.html
@@ -6,15 +6,12 @@
 
     <div class="gas-invoice-restore-form">
 
-        <div ng-form="gasInvoiceRestoreForm" class="form">
+        <div ng-form="gasInvoiceRestoreForm" class="form-inline">
 
-            <div class="form-group" ng-class="{ 'has-error': gasInvoiceRestoreForm.file.$invalid }">
-
-                <input type="file" ngf-select ng-model="$ctrl.dumpFile" name="file"
-                       accept=".csv" ngf-max-size="2MB" required
-                       ngf-model-invalid="errorFile">
-
-            </div>
+            <file-input-wrapper form-name="gasInvoiceRestoreForm" field-name="file"
+                                accept=".csv" input-id="gas-invoice-file-input"
+                                on-file-change="$ctrl.setFile($event)">
+            </file-input-wrapper>
 
             <button class="btn btn-danger" ng-click="$ctrl.restore($ctrl.dumpFile)"
                     ng-disabled="gasInvoiceRestoreForm.$invalid"
